@@ -43,6 +43,10 @@ check_symbol_exists("mmap" "sys/mman.h" HAVE_MMAP)
 check_symbol_exists("scandir" "dirent.h" HAVE_SCANDIR)
 check_symbol_exists("fstat" "sys/stat.h" HAVE_FSTAT)
 check_symbol_exists("fileno" "stdio.h" HAVE_FILENO)
+check_symbol_exists("chdir" "unistd.h" HAVE_CHDIR)
+if(NOT ${HAVE_CHDIR})
+  check_symbol_exists("_chdir" "direct.h" HAVE__CHDIR)
+endif()
 
 check_symbol_exists("getc_unlocked" "stdio.h" HAVE_GETC_UNLOCKED)
 if(${HAVE_GETC_UNLOCKED})
